<resources>
    <string name="app_name">E-Autoskola</string>
    <string name="SignIn">Prijava</string>
    <string name="Email">Email</string>
    <string name="Password">Lozinka</string>
    <string name="successfulSignIn">Uspješna prijava!</string>
    <string name="signInError">Greška u prijavi!</string>
    <string name="candidate">Kandidat</string>
    <string name="instructor">Instruktor</string>
    <string name="NotHavingAutorisation">Nemate potrebnu autorizaciju za pristup. Obratite se autoškoli.</string>
    <string name="wrongEmailOrPassword">Pogrešan email ili lozinka</string>
    <string name="autorization">Autorizacija u tijeku...</string>
    <string name="forgottenPassword">Zaboravljena loznika?</string>
    <string name="account">Račun</string>
    <string name="newRide">Nova vožnja</string>
    <string name="rideHistory">Prijašnje vožnje</string>
    <string name="chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Odjava</string>
    <string name="wrongEmail">Pogrešan email</string>
    <string name="passwordMustContain">Lozinka mora sadržavati barem 6 znakova</string>
    <string name="emailPasswordExplain">Unesi email svog računa na koji će ti doći poveznica za kreiranje nove lozinke</string>
    <string name="confirm">Potvrdi</string>
    <string name="successufulEmailSend">Email za promjenu zaporke je uspješno poslan!</string>
    <string name="scanCandidate">Skeniraj kandidata</string>
    <string name="ok">OK</string>
    <string name="cancel">Odustani</string>
    <string name="notSelected">Kandidat nije odabran</string>
    <string name="startRide">Pokreni vožnju</string>
    <string name="ridehour">Sat vožnje</string>
    <string name="ridestarted">Početak vožnje</string>
    <string name="commentsOnRide">Komentari na vožnju</string>
    <string name="endRide">Završi vožnju</string>
    <string name="LocationPermissionNeeded">Upotreba lokacije</string>
    <string name="LocationPermissionNeededExplanation">Potrebna je dozvola upotrebe lokacije kako bi aplikacija ispravno radila</string>
    <string name="wrongQr">Pogrešan QR kod</string>
    <string name="repeat">Ponovi</string>
    <string name="rideFinishedSuccessful">Vožnja uspješno završena! Podaci su spremljeni!</string>
    <string name="emptyCommentError">Dodaj komentar na vožnju</string>
    <string name="rideended">Kraj vožnje</string>
    <string name="close">Zatvori</string>
    <string name="candidate_format">Kandidat:  %1$s</string>
    <string name="rideHourFormat">Sat vožnje: %1$d</string>
    <string name="checkRidesDetails">Pregled detalja vožnje</string>
    <string name="typeMessage">Pošalji poruku</string>
    <string name="emptyMessage">Prazna poruka</string>
</resources>
