<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/accountInfo"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/newRide"
        android:enabled="true"
        android:icon="@drawable/ic_ride"
        android:title="@string/newRide"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rideHistory"
        android:enabled="true"
        android:icon="@drawable/ic_ride_history"
        android:title="@string/rideHistory"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:showAsAction="ifRoom" />
</menu>