<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/smallMargin"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <TextView
        android:id="@+id/scannedCandidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/notSelected" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scanCandidate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/scanCandidate" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/startRide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/startRide" />

</LinearLayout>
